--- a/Binary-Classification-of-Insurance-Cross-Selling/portafolio_version.ipynb
+++ b/Binary-Classification-of-Insurance-Cross-Selling/portafolio_version.ipynb
@@ -63,15 +63,7 @@
    "source": [
     "#### Data Loading\n",
     "\n",
-    "Here, we load the training dataset. This dataset will be used for all subsequent data processing and model training steps. This dataset was created artificially for the Kaggle Playground Series S4E7, based on [this set](https://www.kaggle.com/datasets/annantkumarsingh/health-insurance-cross-sell-prediction-data).\n",
-    "\n",
-    "@misc{playground-series-s4e7,\n",
-    "    author = {Walter Reade, Ashley Chow},\n",
-    "    title = {Binary Classification of Insurance Cross Selling },\n",
-    "    publisher = {Kaggle},\n",
-    "    year = {2024},\n",
-    "    url = {https://kaggle.com/competitions/playground-series-s4e7}\n",
-    "}"
+    "Here, we load the training dataset. This dataset will be used for all subsequent data processing and model training steps. This dataset was created artificially for the Kaggle Playground Series S4E7, based on [this set](https://www.kaggle.com/datasets/annantkumarsingh/health-insurance-cross-sell-prediction-data).\n"
    ]
   },
   {
